<resources>
    <string name="app_name">NewsNest</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="add_image">Add Image</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a Message...</string>
    <string name="active">Active</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="tech_news">Tech News</string>
    <string name="africa_news">Africa News</string>
    <string name="business_news">Business News</string>
    <string name="categories">Categories</string>
    <string name="latest_news">Latest News</string>
    <string name="no_current_news_found">No Current News Found</string>
    <string name="opinion_news">Opinion News</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_name">Edit Name</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update_account">Update Account</string>
    <string name="back">Back</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bookmark">Bookmark</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="log_out">Log-out</string>
    <string name="finger_print">Finger Print</string>
    <string name="add_fingerprint">Add Fingerprint</string>
    <string name="south_african_news">South African News</string>
    <string name="sports_news">Sports News</string>
    <string name="top_stories">Top Stories</string>
    <string name="world_news">World News</string>
    <string name="source">SOURCE</string>
    <string name="newsnest">NewsNest</string>
    <string name="read_more">Read More</string>
    <string name="accept_and_continue">Accept and Continue</string>
    <string name="switch_language">Switch Language</string>
    <string name="home">Home</string>
    <string name="categoriesnav">Categories</string>
    <string name="messages">Messages</string>
    <string name="chatbot">Chatbot</string>
    <string name="settings">Settings</string>
    <string name="offline_articles">Offline Articles</string>
    <string name="article_detail">Article Detail</string>
    <string name="fetching_article_content">Fetching Article</string>
    <string name="no_cached_content">No Cached Article</string>

</resources>